feat: fork post-plugin LST execution (#250)